Fixed the sideBar scrollbar height issue on the mobile view.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -90,7 +90,7 @@ table {
 @hoverOpacity: .5;
 
 @sideBarWrapperWidth: 55px;
-@sideBarExpandedWidth: 159px;
+@sideBarExpandedWidth: 200px;
 
 @imageHeight: 20px;
 @iconPadding: 4px;
@@ -324,7 +324,8 @@ zoom: 1;*/
 
 #sideBarInnerWrapper{
     position: relative;
-    height: 100% !important;
+    height: 100%;
+    width: 100%;
     width: @sideBarWrapperWidth;
     border-right: @borderSize solid @darkGrey;
     z-index: 1;
@@ -582,7 +583,7 @@ zoom: 1;*/
     }
 
     #sideBarInnerWrapper{
-        width: auto;
+        width: @sideBarExpandedWidth;
     }
 
     #slideMenu {
